side menu correction

--- a/src/style.css
+++ b/src/style.css
@@ -191,15 +191,11 @@ header {
     flex-direction: column;
     justify-content: space-between;
     height: 75vh;
-    
-
- 
-
 }
 
 .bar_content svg {
     width: 50px;
-    margin-top: 40px;
+    margin-top: 10px;
     margin-left: 40px;
 }
 .bar_content_tasks {
@@ -207,13 +203,20 @@ header {
     
 }
 .bar_content_tasks ul {
-    margin-top: 10px;
+    margin-top: 80px;
     font-size: 20px;
     margin-left: 20px;
     list-style-type: none;
+   
 
 }
-.bar_content_tasks ul li svg {
-    width: 20px;
+.mytasks {
+    font-weight: bold;
 }
 
+.bar_content_tasks a {
+    text-decoration: none;
+    color: black;
+    
+
+}
